Fix button spacing; Add popup handling to demo project

--- a/solanum-core/public/css/styles.css
+++ b/solanum-core/public/css/styles.css
@@ -17,10 +17,13 @@ div.solanum {
   padding: 0;
 }
 
-button {
+button.solanum {
   position: absolute;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 svg {
